--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -82,7 +82,7 @@ html{
   font-size: 40px;
   text-align: center;
   padding: 16px 60px;
-  color: rgb(17, 17, 17);
+  color: rgb(32, 32, 32);
   background-color:#61dafb ;
   margin-bottom: 60px;
 }
@@ -99,13 +99,13 @@ html{
 .link-fx{
   font-size: 30px;
   background-color: #61dafb;
-  color: rgb(17, 17, 17);
+  color: rgb(32, 32, 32);
   padding: 20px;
   text-decoration: none;
 }
 .link-fx:hover{
   background-color: rgb(255, 255, 255);
-  color: rgb(17, 17, 17);
+  color: rgb(32, 32, 32);
 }
 
 .parallax {
@@ -144,4 +144,22 @@ progress::-webkit-progress-value {
   font-size: 30px;
   color: #61dafb;
   font-weight: 900;
+}
+
+.footer{
+  text-align: center;
+  background-color: #61dafb;
+  padding: 30px;
+}
+
+.h1-footer{
+  font-size: 50px;
+  text-decoration: underline;
+  color: rgb(32, 32, 32);
+}
+.h2-footer{
+  font-size: 35px;
+  background-color: rgb(32, 32, 32);
+  color: #61dafb;
+  padding: 20px 20px;
 }
